#2317 A bit of code modernisation.