@@ -34,6 +34,7 @@ import static ua.com.fielden.platform.entity.AbstractUnionEntity.unionProperties
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.fetchKeyAndDescOnly;
 import static ua.com.fielden.platform.entity.query.metadata.DataDependencyQueriesGenerator.queryForDependentTypeDetails;
 import static ua.com.fielden.platform.entity.query.metadata.DataDependencyQueriesGenerator.queryForDependentTypesSummary;
+import static ua.com.fielden.platform.error.Result.failure;
 import static ua.com.fielden.platform.error.Result.failuref;
 import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyActions.EDIT;
 import static ua.com.fielden.platform.ref_hierarchy.ReferenceHierarchyActions.REFERENCE_HIERARCHY;
@@ -73,27 +74,27 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
 
     @Override
     @SessionRequired
-    public ReferenceHierarchy save(final ReferenceHierarchy entity) {
-        entity.isValid().ifFailure(Result::throwRuntime);
-        if (entity.getRefEntityId() == null) {
-            throw failuref(ERR_REFERENCE_ENTITY_SHOULD_EXIST);
+    public ReferenceHierarchy save(final ReferenceHierarchy action) {
+        action.isValid().ifFailure(Result::throwRuntime);
+        if (action.getRefEntityId() == null) {
+            throw failure(ERR_REFERENCE_ENTITY_SHOULD_EXIST);
         } else {
-            final ReferenceHierarchyLevel nextLevel = entity.getLoadedHierarchyLevel().nextLevel();
+            final ReferenceHierarchyLevel nextLevel = action.getLoadedHierarchyLevel().nextLevel();
             if (this.generateFunctions.containsKey(nextLevel)) {
-                entity.setGeneratedHierarchy(this.generateFunctions.get(nextLevel).apply(entity));
+                action.setGeneratedHierarchy(this.generateFunctions.get(nextLevel).apply(action));
             } else {
                 throw failuref(ERR_NO_ASSOCIATED_GENERATOR_FUNCTION, nextLevel);
             }
         }
-        return entity.setResetFilter(false);
+        return action.setResetFilter(false);
     }
 
-    private List<ReferenceHierarchyEntry> generateReferenceGroup(final ReferenceHierarchy entity) {
-        return listOf(createReferenceGroup(generateReferences(entity)), createReferencedByGroup(generateTypeLevelHierarchy(entity)));
+    private List<ReferenceHierarchyEntry> generateReferenceGroup(final ReferenceHierarchy action) {
+        return listOf(createReferenceGroup(generateReferences(action)), createReferencedByGroup(generateTypeLevelHierarchy(action)));
     }
 
     private ReferenceHierarchyEntry createReferencedByGroup(final List<TypeLevelHierarchyEntry> types) {
-        final Integer totalCount = types.stream().reduce(0, (prev, curr) -> prev + curr.getNumberOfEntities(), (prev, curr) -> prev + curr);
+        final Integer totalCount = types.stream().reduce(0, (prev, curr) -> prev + curr.getNumberOfEntities(), Integer::sum);
         final ReferenceHierarchyEntry referencedByEntry = new ReferenceHierarchyEntry();
         referencedByEntry.setKey("Referenced By");
         referencedByEntry.setChildren(types);
@@ -112,16 +113,16 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
     }
 
     @SuppressWarnings({ "unchecked", "rawtypes" })
-    private List<ReferenceLevelHierarchyEntry> generateReferences(final ReferenceHierarchy entity) {
-        final Class<? extends AbstractEntity<?>> entityType = entity.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, entity.getRefEntityType()));
+    private List<ReferenceLevelHierarchyEntry> generateReferences(final ReferenceHierarchy action) {
+        final Class<? extends AbstractEntity<?>> entityType = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
         final List<Field> entityFields = getReferenceProperties(entityType);
         final fetch fetchModel = generateReferenceFetchModel(entityType, entityFields);
-        final Optional<? extends AbstractEntity<?>> optionalEntity = co(entityType).findByIdOptional(entity.getRefEntityId(), fetchModel);
+        final Optional<? extends AbstractEntity<?>> optionalEntity = co(entityType).findByIdOptional(action.getRefEntityId(), fetchModel);
         return optionalEntity.map(refEntity -> generateReferencesFor(refEntity, getExistentReferenceProperties(refEntity, entityFields))).orElse(emptyList());
     }
 
     private List<Field> getExistentReferenceProperties(final AbstractEntity<?> refEntity, final List<Field> entityFields) {
-        return entityFields.stream().filter(entityField -> refEntity.get(entityField.getName()) != null).collect(toList());
+        return entityFields.stream().filter(entityField -> refEntity.get(entityField.getName()) != null).toList();
     }
 
     @SuppressWarnings("unchecked")
@@ -143,11 +144,11 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
     private List<Field> getReferenceProperties(final Class<? extends AbstractEntity<?>> entityType) {
         return Finder.findPropertiesThatAreEntities(entityType).stream()
                 .filter(propField -> propField.isAnnotationPresent(MapTo.class) && !PropertyDescriptor.class.isAssignableFrom(propField.getType()) && !systemTypesToExclude.contains(propField.getType()))
-                .collect(toList());
+                .toList();
     }
 
     private List<ReferenceLevelHierarchyEntry> generateReferencesFor(final AbstractEntity<?> entity, final List<Field> entityFields) {
-        return entityFields.stream().map(propField -> generateReferenceFor(entity, propField)).collect(toList());
+        return entityFields.stream().map(propField -> generateReferenceFor(entity, propField)).toList();
     }
 
     private ReferenceLevelHierarchyEntry generateReferenceFor(final AbstractEntity<?> entity, final Field propField) {
@@ -168,10 +169,10 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
     }
 
     private List<ReferencedByLevelHierarchyEntry> generateReferenceByInstanceLevelHierarchy(final ReferenceHierarchy action) {
-        final Class<? extends AbstractEntity<?>> entityClass = action.getEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getEntityType()));
-        final Class<? extends AbstractEntity<?>> refEntityClass = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
-        final List<Field> propFields = getReferenceProperties(entityClass);
-        final QueryExecutionModel<EntityAggregates, AggregatedResultQueryModel> qem = queryForDependentTypeDetails(dependenciesMetadata, action.getRefEntityId(), refEntityClass, entityClass, generateReferenceFetchModel(entityClass, propFields), action.isActiveOnly());
+        final var entityClass = action.getEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getEntityType()));
+        final var refEntityClass = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
+        final var propFields = getReferenceProperties(entityClass);
+        final var qem = queryForDependentTypeDetails(dependenciesMetadata, action.getRefEntityId(), refEntityClass, entityClass, generateReferenceFetchModel(entityClass, propFields), action.isActiveOnly());
         final IPage<EntityAggregates> loadedPage;
         if (action.getPageNumber() == 0) {
             loadedPage = coAggregates.firstPage(qem, action.getPageSize());
@@ -185,7 +186,7 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
     }
 
     private List<ReferencedByLevelHierarchyEntry> createInstanceHierarchy(final List<EntityAggregates> instanceAggregates, final List<Field> propFields) {
-        return instanceAggregates.stream().map(instanceAggregate -> createInstanceHierarchyEntry(instanceAggregate, propFields)).collect(toList());
+        return instanceAggregates.stream().map(instanceAggregate -> createInstanceHierarchyEntry(instanceAggregate, propFields)).toList();
     }
 
     private ReferencedByLevelHierarchyEntry createInstanceHierarchyEntry(final EntityAggregates instanceAggregate, final List<Field> propFields) {
@@ -201,20 +202,20 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
         return instanceEntry;
     }
 
-    private List<TypeLevelHierarchyEntry> generateTypeLevelHierarchy(final ReferenceHierarchy entity) {
-        final Class<? extends AbstractEntity<?>> entityType = entity.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, entity.getRefEntityType()));
-        final Optional<QueryExecutionModel<EntityAggregates, AggregatedResultQueryModel>> model = queryForDependentTypesSummary(dependenciesMetadata, entity.getRefEntityId(), entityType, entity.isActiveOnly());
-        final List<EntityAggregates> result = model.map(qem -> coAggregates.getAllEntities(qem)).orElse(emptyList());
-        return createTypeHierarchyEntries(entity, result);
+    private List<TypeLevelHierarchyEntry> generateTypeLevelHierarchy(final ReferenceHierarchy action) {
+        final Class<? extends AbstractEntity<?>> entityType = action.getRefEntityClass().orElseThrow(() -> failuref(ERR_ENTITY_TYPE_NOT_FOUND, action.getRefEntityType()));
+        final Optional<QueryExecutionModel<EntityAggregates, AggregatedResultQueryModel>> model = queryForDependentTypesSummary(dependenciesMetadata, action.getRefEntityId(), entityType, action.isActiveOnly());
+        final List<EntityAggregates> result = model.map(coAggregates::getAllEntities).orElse(emptyList());
+        return createTypeHierarchyEntries(action, result);
 
     }
 
-    private List<TypeLevelHierarchyEntry> createTypeHierarchyEntries(final ReferenceHierarchy entity, final List<EntityAggregates> typeAggregates) {
-        return typeAggregates.stream().map(typeAggregate -> createTypeHierarchyEntry(entity, typeAggregate)).collect(toList());
+    private List<TypeLevelHierarchyEntry> createTypeHierarchyEntries(final ReferenceHierarchy action, final List<EntityAggregates> typeAggregates) {
+        return typeAggregates.stream().map(typeAggregate -> createTypeHierarchyEntry(action, typeAggregate)).toList();
     }
 
     @SuppressWarnings("unchecked")
-    private TypeLevelHierarchyEntry createTypeHierarchyEntry(final ReferenceHierarchy entity, final EntityAggregates typeAggregate) {
+    private TypeLevelHierarchyEntry createTypeHierarchyEntry(final ReferenceHierarchy action, final EntityAggregates typeAggregate) {
         try {
             final TypeLevelHierarchyEntry typeEntry = new TypeLevelHierarchyEntry();
             final String entityType = typeAggregate.get("type");
@@ -223,8 +224,8 @@ public class ReferenceHierarchyDao extends CommonEntityDao<ReferenceHierarchy> i
             typeEntry.setKey(titleAndDesc.getKey());
             typeEntry.setDesc(titleAndDesc.getValue());
             typeEntry.setEntityType(entityType);
-            typeEntry.setRefEntityId(entity.getRefEntityId());
-            typeEntry.setRefEntityType(entity.getRefEntityType());
+            typeEntry.setRefEntityId(action.getRefEntityId());
+            typeEntry.setRefEntityType(action.getRefEntityType());
             typeEntry.setNumberOfEntities(Optional.ofNullable(typeAggregate.get("qty")).map(v -> Integer.valueOf(v.toString())).orElse(0));
             typeEntry.setHierarchyLevel(TYPE);
             typeEntry.setHasChildren(true);
